--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
